# cpp20-modules-example

./: .cmake-format.py  CMakeLists.txt
source/: CMakeLists.txt  main.cpp
source/hello/: CMakeLists.txt  hello.cpp
